bug 4458: There is no longer an audit signing key desginated unless an admin has explicitly designated one.  When no audti signing key is designated, both the Gateway and the SSM use the SSL key for this purpose.
(Previously, the audit signing key defaulted to being whever the SSL key currently was, which had almost identical behavior but subtly different semantics.)

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28267 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -976,7 +976,7 @@ keyStoreAuditViewerKey.setSystemProperty = false
 keyStoreAuditViewerKey.visible = false
 
 keyStoreAuditSigningKey.description = Keystore ID and alias of default audit signing key, colon delimited.  A keystore ID of -1 means "unspecified".
-keyStoreAuditSigningKey.default = ${keyStoreDefaultSslKey}
+keyStoreAuditSigningKey.default = -1:AUDITSIGNING
 keyStoreAuditSigningKey.clusterProperty = keyStore.auditSigning.alias
 keyStoreAuditSigningKey.systemProperty = ${propertyPrefix}.keyStore.auditSigning.alias
 keyStoreAuditSigningKey.setSystemProperty = false
