Added info about the expected type, name, ownership and permission for the configuration file.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28270 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/etc/appliance/radius/radius_ldap_setup.conf
+++ b/etc/appliance/radius/radius_ldap_setup.conf
@@ -1,3 +1,15 @@
+# This is the configuration file for radius_ldap_setup.sh script used to configure the SSG appliance
+# to be able to authenticate its users (OS level only) using Radius, LDAP or Radius+LDAP.
+
+# This file must comply with these requirements:
+# - type: text (ASCII text)
+# - name: radius_ldap_setup.conf
+# - ownership: root
+# - permissions: 600
+
+# The above mentioned script must be called with this file full patha and name as the only argument:
+# Example: .../radius_ldap_setup.sh /opt/SecureSpan/Appliance/config/radius_ldap_setup.conf
+
 # CFG_TYPE variable can have only one of these values: "file", "ldap_only", "radius_only" or "radius_and_ldap"
 # the "file" option is actually going to disable all the other possible authentication methods and provide
 # only the local, default authentication using files
@@ -26,3 +38,5 @@ RADIUS_SECRET="poiu0987"
 # It is only relevant if the CFG_TYPE variable is "radius_only or "radius_and_ldap"
 RADIUS_TIMEOUT="3"
 
+
+# END of configuration file
