--- a/build.xml
+++ b/build.xml
@@ -2374,6 +2374,7 @@
             <fileset dir="${src.root}/etc/appliance">
                 <include name="ssg_sys_config.pl"/>
                 <include name="systemconfig.sh"/>
+                <include name="authconfig/radius_ldap_setup.sh"/>
             </fileset>
         </copy>
 
