bug 10267: There is no longer a default designated CA key alias on a fresh Gateway install.  Upgraded systems will have the formerly-implicit "-1:CA" designation made explicit in the database (if they didn't already have an explicit designation) in case the upgraded system was relying on an implicitly designated CA cert with alias "ca".
As well, the AUDITVIEWER and AUDITSIGNING keys no longer have default designated aliases.  However since these designations are new for 6.0 there is no special upgrade behavior.

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28295 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -962,21 +962,21 @@ keyStoreDefaultSslKey.setSystemProperty = false
 keyStoreDefaultSslKey.visible = false
 
 keyStoreDefaultCaKey.description = Keystore ID and alias of default CA key, colon delimited.  A keystore ID of -1 means "unspecified".
-keyStoreDefaultCaKey.default = -1:CA
+keyStoreDefaultCaKey.default =
 keyStoreDefaultCaKey.clusterProperty = keyStore.defaultCa.alias
 keyStoreDefaultCaKey.systemProperty = ${propertyPrefix}.keyStore.defaultCa.alias
 keyStoreDefaultCaKey.setSystemProperty = false
 keyStoreDefaultCaKey.visible = false
 
 keyStoreAuditViewerKey.description = Keystore ID and alias of audit viewer decryption key, colon delimited.  A keystore ID of -1 means "unspecified".
-keyStoreAuditViewerKey.default = -1:AUDITVIEWER
+keyStoreAuditViewerKey.default =
 keyStoreAuditViewerKey.clusterProperty = keyStore.auditViewer.alias
 keyStoreAuditViewerKey.systemProperty = ${propertyPrefix}.keyStore.auditViewer.alias
 keyStoreAuditViewerKey.setSystemProperty = false
 keyStoreAuditViewerKey.visible = false
 
 keyStoreAuditSigningKey.description = Keystore ID and alias of default audit signing key, colon delimited.  A keystore ID of -1 means "unspecified".
-keyStoreAuditSigningKey.default = -1:AUDITSIGNING
+keyStoreAuditSigningKey.default =
 keyStoreAuditSigningKey.clusterProperty = keyStore.auditSigning.alias
 keyStoreAuditSigningKey.systemProperty = ${propertyPrefix}.keyStore.auditSigning.alias
 keyStoreAuditSigningKey.setSystemProperty = false
