ug EM-693: Fix for EM Offline Policy Migration: Nice to display more detailed error message when attempting to upload an encrypted archive without password
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28320 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMigrationUploadPanel.properties
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMigrationUploadPanel.properties
@@ -5,3 +5,6 @@ label.header = Select a migration archive for upload.
 archive = Archive
 label = Label
 password = Password
+
+archive-error = Error processing archive, please try again.
+archive-encrypted = If the archive is encrypted ensure that the correct password is provided.
