--- a/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMigrationUploadPanel.properties
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/ui/pages/PolicyMigrationUploadPanel.properties
@@ -8,3 +8,4 @@ password = Password
 
 archive-error = Error processing archive, please try again.
 archive-encrypted = If the archive is encrypted ensure that the correct password is provided.
+archive-zip = If the archive is not encrypted, do not enter a password.
