bug 10335: fixed by adding security.stig.enabled back as a deprecated system property. This is the default value for hidden cluster property security.policyManager.forbidPasswordWhenCertPresent. In an upgraded system, if system property com.l7tech.server.stigEnabled is configured to false, then this will be the default value of security.policyManager.forbidPasswordWhenCertPresent. This can be overridden by either removing the system property of configuring a value for the cluster property. Removed this cluster property definition from emconfig as it is not needed by the Enterprise Manager.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28345 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1193,9 +1193,14 @@ password.expiry.description=Number of days until password expires (max 90 days).
 password.expiry.default=90
 password.expiry.clusterProperty=password.expiry
 
+#Property is deprecated, leaving in for backwards compatibility
+security.stig.enabled.default=true
+security.stig.enabled.systemProperty=${propertyPrefix}.stigEnabled
+
 security.policyManager.forbidPasswordWhenCertPresent.description = Use certificate to authenticate when present.
-security.policyManager.forbidPasswordWhenCertPresent.default=true
+security.policyManager.forbidPasswordWhenCertPresent.default=${security.stig.enabled}
 security.policyManager.forbidPasswordWhenCertPresent.clusterProperty=security.policyManager.forbidPasswordWhenCertPresent
+security.policyManager.forbidPasswordWhenCertPresent.visible=false
 
 krb5Keytab.description = Kerberos keytab file data
 krb5Keytab.visible = false
