SSG-4722: fixed by setting a default value of 1MB for MySQL server variable 'group_concat_max_len' (not set when db instance is Derby). This should allow for most audits details to be successfully concataned using MySQL's GROUP_CONCAT function. If values are truncated, which can mean audit details have been omitted, then this can manifest as exported audits whose signatures will not verify in the audit checker. If this happens then the value for group_concat_max_len can be modified via new cluster property 'audit.export.group_concat_max_len'. This value is set on the connection's session prior to querying for audit data and is reverted to what ever value the MySql server instance had afterwards.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28359 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1440,3 +1440,7 @@ httpDigest.enable.description=Enable storage of digest password compatible with 
 httpDigest.enable.clusterProperty=httpDigest.enable
 httpDigest.enable.default=false
 httpDigest.enable.visible=false
+
+audit.export.group_concat_max_len.description=Session value for MySQL group_concat_max_len server variable set when exporting audits. Minimum value is 1024 bytes.
+audit.export.group_concat_max_len.clusterProperty=audit.export.group_concat_max_len
+audit.export.group_concat_max_len.default=1048576
