CsrfProtectionAssertion is now part of the production build.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28367 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/production/ivy.xml
+++ b/modules/gateway/production/ivy.xml
@@ -60,7 +60,8 @@
         <dependency name="JSONSchemaAssertion" rev="latest.integration" conf="module"/>
         <dependency name="SimpleRawTransportAssertion" rev="latest.integration" conf="module"/>
         <dependency name="EncodeDecodeAssertion" rev="latest.integration" conf="module"/>
-        
+        <dependency name="CsrfProtectionAssertion" rev="latest.integration" conf="module"/>
+
         <!-- Optional Modular Assertions are copied to "dist" but not packaged -->
         <dependency name="CaWsdmAssertion" rev="latest.integration" conf="module-optional"/>
     </dependencies>
