SSG-4445: LDAP search results maximum size can now be set as cluster properties (one for regular searches and one for group membership searches)
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28390 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -474,12 +474,6 @@ savsePort.default = 7777
 savsePort.jndi = ${jndiPrefix}/SavSEPort
 savsePort.systemProperty = ${propertyPrefix}.savsePort
 
-# the number of max results in an idendity provider search result operation
-maxLdapSearchResultSize.description = The number of max results in an idendity provider search result operation
-maxLdapSearchResultSize.default = 50
-maxLdapSearchResultSize.jndi = ${jndiPrefix}/MaxLDAPResSize
-maxLdapSearchResultSize.systemProperty = ${propertyPrefix}.maxLdapSearchResultSize
-
 metricsFineInterval.description = Time interval for Service Metrics fine resolution bins (Milliseconds). (Note: A cluster-wide restart is required for changes to apply.)
 metricsFineInterval.default = 5000
 metricsFineInterval.systemProperty = com.l7tech.service.metrics.fineBinInterval
@@ -1212,6 +1206,18 @@ krb5TicketCacheLifetime.systemProperty=com.l7tech.common.security.kerberos.lifet
 
 policyorganization.maxFolderDepth.default=8
 policyorganization.maxFolderDepth.systemProperty=${propertyPrefix}.maxFolderDepth
+
+maxLdapSearchResultSize.description = The maximum number of results to return in an LDAP Identity Provider search (Integer).
+maxLdapSearchResultSize.default = 50
+maxLdapSearchResultSize.jndi = ${jndiPrefix}/MaxLDAPResSize
+maxLdapSearchResultSize.clusterProperty = ldap.searchMaxResults
+maxLdapSearchResultSize.systemProperty = ${propertyPrefix}.maxLdapSearchResultSize
+
+ldap.group.searchMaxResults.description = The maximum number of results to return in an LDAP group membership search (Integer).
+ldap.group.searchMaxResults.default = ${maxLdapSearchResultSize}
+ldap.group.searchMaxResults.jndi = ${jndiPrefix}/MaxGroupLDAPResSize
+ldap.group.searchMaxResults.clusterProperty = ldap.group.searchMaxResults
+ldap.group.searchMaxResults.systemProperty = ${propertyPrefix}.maxGroupLdapSearchResultSize
 
 ldapCertIndexInterval.description=Milliseconds in between LDAP certificate indexing.
 ldapCertIndexInterval.default=600000
