SSM-2376: fixed by checking if the currently logged on user has a client cert before showing them the change password dialog when the password change is invoked via the File menu of the Policy Manager or the Manage menu in the Applet.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28395 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/resources/PasswordDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/resources/PasswordDialog.properties
@@ -1,7 +1,5 @@
 ############################
-# PasswordDoubleEntryDialog.properties
-#
-# Properties in this file are organized by the objects they affect
+# Properties for PasswordDialog and ChangePasswordDialog
 #
 ############################
 
@@ -24,8 +22,9 @@ confirmPasswordField.label=Retype New Password:
 confirmPasswordField.mnemonic=R
 confirmPasswordField.tooltip=Retype new password
 
-confirmPassChange.question=Client cert exists! Changing the password will also revoke the client cert.\nAre you sure you want to proceed?
-confirmPassChange.title=Also revoke cert?
+revokeClientCert.question=Client cert exists! Changing the password will also revoke the client cert.\nAre you sure you want to proceed?
+revokeClientCert.title=Also revoke cert?
+revokeClientCertCurrentUser.question=Client cert exists! Changing your password will also revoke your client cert.\nAre you sure you want to proceed?
 
 newAndConfirmPasswordField.mismatch=The passwords do not match.
 newAndConfirmPasswordField.title=Warning
