SSG-4775: Suppress shutdown errors for C3P0 connections.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28413 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/logging.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/logging.properties
@@ -12,6 +12,10 @@ com.l7tech.logging.debugExceptionLoggers = \
   org.hibernate.event.def.AbstractFlushingEventListener \
   org.hibernate.util.JDBCExceptionReporter
 
+# Space separated list of loggers to turn off during shutdown
+com.l7tech.logging.shutdownIgnoreLoggers = \
+  com.mchange.v2.resourcepool.BasicResourcePool
+
 # Set the default logging level for the root logger
 .level = WARNING
 
