SSG-4750: fixed by changing the 'Allow empty values' check box text to be 'Skip validation if header is missing or empty'. Renamed associated property to be 'allowMissingOrEmptyReferer'. Extracted the remaining property strings in the dialog into resource file. Update test coverage and gave tests meaningful names. Removed redundant tests and added tests for functional gaps.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28459 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/assertions/CsrfProtectionAssertion/src/main/resources/com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog.properties
+++ b/modules/gateway/assertions/CsrfProtectionAssertion/src/main/resources/com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog.properties
@@ -2,3 +2,12 @@ doubleSubmitCookiesValidation=Double Submit Cookie Validation
 enableDoubleSubmitCookiesValidation=Enable Double Submit Cookie Validation
 httpRefererHeaderValidation=HTTP-Referer Header Validation
 enableHTTPRefererHeaderValidation=Enable HTTP-Referer Header Validation
+skipValidationIfEmptyOrMissing=Skip validation if header is missing or empty
+validDomains=Valid Domains
+options=Options
+cookieName=Cookie Name
+httpParameterName=HTTP Parameter Name
+allowedHttpMethods=Allowed HTTP Methods
+add=Add
+edit=Edit
+remove=Remove
