--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1030,14 +1030,17 @@ policyVersioningMaxRevisions.clusterProperty = policyVersioning.maxRevisions
 hpsoamEnabled.description = Enable Agent web service for HP SOA Manager (true/false)
 hpsoamEnabled.default = false
 hpsoamEnabled.clusterProperty = hpsoam.enabled
+hpsoamEnabled.visible = false
 
 hpsoamRequireSSL.description = Control whether SSL is required for Agent web service for HP SOA Manager (true/false)
 hpsoamRequireSSL.default = false
 hpsoamRequireSSL.clusterProperty = hpsoam.requireSSL
+hpsoamRequireSSL.visible = false
 
 hpsoamRequireCreds.description = Control whether credentials of 'Administrator' or 'Operator' roles are required for Agent web service for HP SOA Manager (true/false)
 hpsoamRequireCreds.default = false
 hpsoamRequireCreds.clusterProperty = hpsoam.requireCreds
+hpsoamRequireCreds.visible = false
 
 soapRejectMustUnderstand.description = If true, SOAP messages containing an unrecognized SOAP header addressed to the Gateway with mustUnderstand="1" will be rejected immediately (true/false)
 soapRejectMustUnderstand.default = true
