SSM-3315: Changed wording in UI to consistently use "Add" instead of "Insert" for "Add or Remove Element" assertion.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28471 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/console/src/main/resources/com/l7tech/console/panels/RemoveElementPropertiesDialog.properties
+++ b/modules/gateway/console/src/main/resources/com/l7tech/console/panels/RemoveElementPropertiesDialog.properties
@@ -2,7 +2,7 @@
 
 button.ok = &OK
 button.cancel = &Cancel
-radio.insert.label=&Insert New Element as
+radio.insert.label=&Add New Element as
 radio.remove.label=&Remove Element from Document
 radio.insert.label.suffix=of Existing Element
 field.existing.label=&Variable Name of Existing Element
