ESM Enhancements ( http://sarek.l7tech.com/mediawiki/index.php/ESM_Enhancements ). The IP address and port used by the ESM for communication with each Gateway node is now configurable. ESM features are now enabled on a listen port using the "Enterprise Manager access" feature. Trust of the ESM certificate can be configured by entering the SHA-1 thumbprint. Additional configuration and status details are now displayed in the Manage Gateways / Configure tab. Added "replication delay" monitored cluster scoped property. The versions in trunk are now 6.1.0 / 1.6.0 (ESM).
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28510 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/ems/src/main/resources/com/l7tech/server/ems/resources/emconfig.properties
+++ b/modules/ems/src/main/resources/com/l7tech/server/ems/resources/emconfig.properties
@@ -256,6 +256,10 @@ monitoring.ssgCluster.initAlertTrigger.auditSize.description = Number of the Gat
 monitoring.ssgCluster.initAlertTrigger.auditSize.default = 100000
 monitoring.ssgCluster.initAlertTrigger.auditSize.clusterProperty = monitoring.ssgCluster.initAlertTrigger.auditSize
 
+monitoring.ssgCluster.initAlertTrigger.databaseReplicationDelay.description = The database replication delay (unit: seconds).
+monitoring.ssgCluster.initAlertTrigger.databaseReplicationDelay.default = 60
+monitoring.ssgCluster.initAlertTrigger.databaseReplicationDelay.clusterProperty = monitoring.ssgCluster.initAlertTrigger.databaseReplicationDelay
+
 monitoring.ssgNode.initAlertTrigger.logSize.description = The sum of all log files (unit: MB).
 monitoring.ssgNode.initAlertTrigger.logSize.default = 100
 monitoring.ssgNode.initAlertTrigger.logSize.clusterProperty = monitoring.ssgNode.initAlertTrigger.logSize
@@ -286,6 +290,10 @@ monitoring.ssgNode.initAlertTrigger.swapUsage.clusterProperty = monitoring.ssgNo
 monitoring.ssgCluster.initSamplingInterval.auditSize.description = The interval for sampling Gateway audit size (unit: second).
 monitoring.ssgCluster.initSamplingInterval.auditSize.default = 30
 monitoring.ssgCluster.initSamplingInterval.auditSize.clusterProperty = monitoring.ssgCluster.initSamplingInterval.auditSize
+
+monitoring.ssgCluster.initSamplingInterval.databaseReplicationDelay.description = The interval for sampling database replication delay (unit: second).
+monitoring.ssgCluster.initSamplingInterval.databaseReplicationDelay.default = 30
+monitoring.ssgCluster.initSamplingInterval.databaseReplicationDelay.clusterProperty = monitoring.ssgCluster.initSamplingInterval.databaseReplicationDelay
 
 monitoring.ssgNode.initSamplingInterval.operatingStatus.description = The interval for sampling operating status (unit: second).
 monitoring.ssgNode.initSamplingInterval.operatingStatus.default = 10
@@ -346,6 +354,10 @@ monitoring.ssgCluster.auditSize.lowerLimit.description = The lower limit of the 
 monitoring.ssgCluster.auditSize.lowerLimit.default = 1000
 monitoring.ssgCluster.auditSize.lowerLimit.clusterProperty = monitoring.ssgCluster.auditSize.lowerLimit
 
+monitoring.ssgCluster.databaseReplicationDelay.lowerLimit.description = The lower limit of the database replication delay (unit: seconds).
+monitoring.ssgCluster.databaseReplicationDelay.lowerLimit.default = 10
+monitoring.ssgCluster.databaseReplicationDelay.lowerLimit.clusterProperty = monitoring.ssgCluster.databaseReplicationDelay.lowerLimit
+
 monitoring.ssgNode.logSize.lowerLimit.description = The lower limit of the sum of all log files (unit: MB).
 monitoring.ssgNode.logSize.lowerLimit.default = 1
 monitoring.ssgNode.logSize.lowerLimit.clusterProperty = monitoring.ssgNode.logSize.lowerLimit
@@ -398,6 +410,10 @@ monitoring.nextRefresh.interval.clusterProperty = monitoring.nextRefresh.interva
 monitoring.ssgCluster.auditSize.unit.description = The unit of the Gateway audit events.
 monitoring.ssgCluster.auditSize.unit.default = audit events
 monitoring.ssgCluster.auditSize.unit.clusterProperty = monitoring.ssgCluster.auditSize.unit
+
+monitoring.ssgCluster.databaseReplicationDelay.unit.description = The unit of the database replication delay.
+monitoring.ssgCluster.databaseReplicationDelay.unit.default = seconds
+monitoring.ssgCluster.databaseReplicationDelay.unit.clusterProperty = monitoring.ssgCluster.databaseReplicationDelay.unit
 
 monitoring.ssgNode.logSize.unit.description = The unit of the sum of all log files.
 monitoring.ssgNode.logSize.unit.default = MB
