--- a/modules/gateway/config/src/main/resources/com/l7tech/gateway/config/client/beans/trust/TrustInterviewerMessages.properties
+++ b/modules/gateway/config/src/main/resources/com/l7tech/gateway/config/client/beans/trust/TrustInterviewerMessages.properties
@@ -4,9 +4,11 @@ host.controller.remoteNodeManagement.enabled.description = Enable or disable Rem
 host.controller.remoteNodeManagement.enabled.prompt = Enable Remote Node Management?
 
 host.controller.remoteNodeManagement.tempTrustedCertUrl.description = \
-  Enter the HTTPS URL for the Enterprise Service Manager you will use\n\
-  to manage this node (e.g. https://<enterprisemanager>:8182) 
-host.controller.remoteNodeManagement.tempTrustedCertUrl.prompt = ESM URL
+  Enter either an HTTPS URL (e.g. https://<enterprisemanager>:8182) or an\n\
+  SHA-1 Thumbprint (e.g. 7E:EF:...) to configure the SSL certificate of the\n\
+  Enterprise Service Manager you will use to manage this node.
+
+host.controller.remoteNodeManagement.tempTrustedCertUrl.prompt = ESM Certificate
 
 host.controller.remoteNodeManagement.confirmTrustedCert.description = Confirm new Trusted Certificate:
 host.controller.remoteNodeManagement.confirmTrustedCert.value = {0}
