--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1144,6 +1144,16 @@ admin.esmRequestSizeLimit.default = 10485760
 admin.esmRequestSizeLimit.systemProperty = ${propertyPrefix}.admin.ws.requestSizeLimit
 admin.esmRequestSizeLimit.clusterProperty = admin.esmRequestSizeLimit
 
+admin.esmInterfaceTag.description = Name of the Interface Tag used to identify the IP address for ESM administration requests.
+admin.esmInterfaceTag.default =
+admin.esmInterfaceTag.systemProperty = ${propertyPrefix}.admin.esmInterfaceTag
+admin.esmInterfaceTag.clusterProperty = admin.esmInterfaceTag
+
+admin.esmPort.description = External HTTPS port for ESM administration requests.
+admin.esmPort.default = ${clusterhttpsport}
+admin.esmPort.systemProperty = ${propertyPrefix}.admin.esmPort
+admin.esmPort.clusterProperty = admin.esmPort
+
 processControllerPresent.description = Nodes in this cluster are managed processes (true/false).
 processControllerPresent.visible = false
 processControllerPresent.clusterProperty = node.processControllerPresent
