Implementation of Cluster Safe Identifiers feature ( http://sarek.l7tech.com/mediawiki/index.php/Cluster_Safe_Identifiers ). The Hibernate identifier generator is switched from the table hi/lo generator to the sequence hi/lo generator. On MySQL the sequence is implemented as a function. Added Hibernate dialects for MySQL and Derby to add/fix support for "sequences". Database script utilities now support creation of MySQL functions using the "delimiter" syntax.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28515 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/etc/db/mysql/my.cnf
+++ b/etc/db/mysql/my.cnf
@@ -39,9 +39,10 @@ max_allowed_packet=32M
 interactive_timeout=864000
 slow_query_log=1
 
-# Uncommment log-bin and log-slave-update if a clustered
-# db server
+# Uncommment log-bin, log-slave-update and log_bin_trust_function_creators
+# if a clustered db server
 #log-bin=/var/lib/mysql/ssgbin-log
+#log_bin_trust_function_creators=1
 #log-slave-update
 # uncomment the next item on 1st db master server
 #server-id=1
