--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/hibernate_default.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/hibernate_default.properties
@@ -41,7 +41,7 @@ l7.mysql.url.parameters = \
   ${l7.mysql.url.parameters.extra}
 l7.mysql.connection.url = jdbc:mysql://${l7.mysql.url.${node.db.clusterType}.hosts}/${node.db.config.main.name}?${l7.mysql.url.parameters}
 l7.mysql.connection.driver_class = com.mysql.jdbc.Driver
-l7.mysql.dialect = org.hibernate.dialect.MySQLDialect
+l7.mysql.dialect = com.l7tech.server.util.MySQL5InnoDBDialectWithSeq
 
 #
 # Commonly customized settings
