Database replication monitoring ( http://sarek.l7tech.com/mediawiki/index.php/Database_Replication_Monitor ). Database replication delay is now monitored when a secondary database is configured, slow or failing replication is audited.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28540 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/hibernate_default.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/hibernate_default.properties
@@ -40,6 +40,8 @@ l7.mysql.url.parameters = \
   &logger=${l7.mysql.url.parameter.logger}\
   ${l7.mysql.url.parameters.extra}
 l7.mysql.connection.url = jdbc:mysql://${l7.mysql.url.${node.db.clusterType}.hosts}/${node.db.config.main.name}?${l7.mysql.url.parameters}
+l7.mysql.main.connection.url = jdbc:mysql://${node.db.config.main.host}:${node.db.config.main.port}/${node.db.config.main.name}?${l7.mysql.url.parameters}
+l7.mysql.failover.connection.url = jdbc:mysql://${node.db.config.failover.host}:${node.db.config.failover.port}/${node.db.config.main.name}?${l7.mysql.url.parameters}
 l7.mysql.connection.driver_class = com.mysql.jdbc.Driver
 l7.mysql.dialect = com.l7tech.server.util.MySQL5InnoDBDialectWithSeq
 
@@ -52,3 +54,10 @@ hibernate.connection.url = ${l7.${node.db.type}.connection.url}
 hibernate.connection.username = ${node.db.config.main.user}
 hibernate.connection.password = ${node.db.config.main.pass}
 
+#
+# Database monitoring specific properties
+#
+l7.database.main.description = ${node.db.config.main.host}/${node.db.config.main.name}
+l7.database.main.url = ${l7.${node.db.type}.main.connection.url}
+l7.database.failover.description = ${node.db.config.failover.host}/${node.db.config.main.name}
+l7.database.failover.url = ${l7.${node.db.type}.failover.connection.url}
