--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1458,3 +1458,16 @@ httpDigest.enable.visible=false
 audit.export.group_concat_max_len.description=Session value for MySQL group_concat_max_len server variable set when exporting audits. Minimum value is 1024 bytes.
 audit.export.group_concat_max_len.clusterProperty=audit.export.group_concat_max_len
 audit.export.group_concat_max_len.default=1048576
+
+db.replicationDelayCheckInterval.description = Interval between updates (and checking) of the replicated sequence value, zero to disable monitoring (timeunit)
+db.replicationDelayCheckInterval.default = 10s
+db.replicationDelayCheckInterval.clusterProperty = db.replicationDelayCheckInterval
+db.replicationDelayCheckInterval.visible = false
+
+db.replicationDelayThreshold.description = Threshold for auditing a warning due to slow or failed replication, zero to disable audits (timeunit)
+db.replicationDelayThreshold.default = 60s
+db.replicationDelayThreshold.clusterProperty = db.replicationDelayThreshold
+
+db.replicationErrorAuditInterval.description = The minimum interval between successive database replication failure audits (timeunit)
+db.replicationErrorAuditInterval.default = 60m
+db.replicationErrorAuditInterval.clusterProperty = db.replicationErrorAuditInterval
