SSG-4571: Update MySQL replication to allow for multi-master ( http://dev.mysql.com/doc/refman/5.1/en/replication-options-slave.html#sysvar_slave_exec_mode )
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28566 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/etc/db/mysql/my.cnf
+++ b/etc/db/mysql/my.cnf
@@ -56,6 +56,7 @@ relay-log-info-file = /var/lib/mysql/ssgrelay-bin.info
 slave-skip-errors=126,1053,1105,1129,1158,1159,1160,1161
 slave_compressed_protocol=1 
 slave-net-timeout=30
+slave_exec_mode=IDEMPOTENT
 
 # Two months of logs rollover. Its not size dependent.
 # This opens up the risk of having failed replication for 62 days.
