Content type enhancement progress.  The Gateway is now more permissive about message content type header formatting by default.    The previous stricter behavior can be enabled globally by setting the cluster property "io.alwaysValidateContentType" to "true", or on a case-by-case basis by using a new Validate Content Type threat protection assertion in a service or global policy.
  Content type headers with whitespace immediately adjacent to the slash delimiting the type and subtype will now be rejected if strict validation is performed (Bug #9118).

git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28592 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -636,6 +636,14 @@ ioMailInTimeout.description = IO timeout for inbound communication with mail ser
 ioMailInTimeout.default = 60s
 ioMailInTimeout.clusterProperty = mail.inTimeout
 
+ioAlwaysValidateContentType.description = Always perform full validation of Content-Type headers (true/false, default false). Requires gateway restart.
+ioAlwaysValidateContentType.default = false
+ioAlwaysValidateContentType.clusterProperty = io.alwaysValidateContentType
+ioAlwaysValidateContentType.systemProperty = com.l7tech.common.mime.alwaysValidateContentType
+ioAlwaysValidateContentType.getSystemProperty = false
+ioAlwaysValidateContentType.setSystemProperty = true
+ioAlwaysValidateContentType.visible = false
+
 # Old name of this setting, but defaults live here -- new one points at this one for defaults
 xsltMaxCacheEntries.description = Maximum number of cached stylesheets loaded from URLs, 0 for no caching (Integer). Requires gateway restart.
 xsltMaxCacheEntries.default = 100
