--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/logging.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/logging.properties
@@ -33,6 +33,7 @@ com.l7tech.level = CONFIG
 
 # Turn off WARNING for expected/accepted behaviours
 com.mchange.level = SEVERE
+MySQL.level = SEVERE
 org.springframework.remoting.support.RemoteInvocationTraceInterceptor.level = SEVERE
 org.springframework.beans.factory.config.PropertiesFactoryBean.level = SEVERE
 org.springframework.beans.factory.config.PropertyPlaceholderConfigurer.level = SEVERE
