ug EM-706: The "node.processControllerExternalPort" cluster property now defaults to the configured PC port for the node.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28654 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1174,10 +1174,14 @@ processControllerPort.clusterProperty = node.processControllerPort
 processControllerPort.systemProperty = ${propertyPrefix}.processControllerPort
 processControllerPort.default = 8765
 
+processControllerDefaultExternalPort.description = Default value for the node management port.
+processControllerDefaultExternalPort.systemProperty = ${propertyPrefix}.processControllerPort
+processControllerDefaultExternalPort.default = 8765
+
 processControllerExternalPort.description = Port number for ESM remote management of cluster node process managers.
 processControllerExternalPort.clusterProperty = node.processControllerExternalPort
 processControllerExternalPort.systemProperty = ${propertyPrefix}.processControllerExternalPort
-processControllerExternalPort.default = 8765
+processControllerExternalPort.default = ${processControllerDefaultExternalPort}
 
 logon.warningBanner.description=Warning message that will be displayed to the user upon successful login to the Policy Manager. By default, this cluster property is empty, which will result in no warning banner being displayed.
 logon.warningBanner.default=
