ug EM-723: Fix for ESM: An empty logging.properties file should be installed. Also fix issue with missing line break when appending to the default properties.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28712 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/build.xml
+++ b/build.xml
@@ -3254,6 +3254,7 @@
             <copy todir="@{dir}/${install.src.esm.config}">
                 <fileset dir="${build.dir}/emsconfigwizard"/>
             </copy>
+            <copy file="${src.root}/etc/enterprisemanager/logging.template.properties" tofile="@{dir}/${install.src.esm.etc}/logging.properties"/>
             <copy file="${src.root}/etc/omp.dat" tofile="@{dir}/${install.src.esm.etc}/omp.dat"/>
 
             <!-- help files -->
