SSM-3356: fixed by adding a new 'Validate Signatures' check box to the audit viewer. Initial implementation of http://sarek/mediawiki/index.php?title=Audit_Signature_Verification_Enhancements. Cluster property to limit the size of a message audit's request or response XML not implemented. Warning label when results > 10k not implemented. Added new cluster property "audit.validateSignature.maxrecords" which determines the maximum amount of records the Gateway will calculate digests for at one time.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@28736 219f1c6e-4a0e-43c8-96f2-6e749be13fd4

--- a/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
+++ b/modules/gateway/server/src/main/resources/com/l7tech/server/resources/serverconfig.properties
@@ -1462,6 +1462,11 @@ audit.auditDetailExcludeList.description=The audit detail messages never to audi
 audit.auditDetailExcludeList.clusterProperty=audit.auditDetailExcludeList
 audit.auditDetailExcludeList.visible=false
 
+audit.validateSignature.maxrecords.description=The maximum amount of audit records signatures to validate at a time. Min 100. Max 1000.
+audit.validateSignature.maxrecords.clusterProperty=audit.validateSignature.maxrecords
+audit.validateSignature.maxrecords.default=100
+audit.validateSignature.maxrecords.visible=true
+
 httpDigest.enable.description=Enable storage of digest password compatible with HTTP Digest
 httpDigest.enable.clusterProperty=httpDigest.enable
 httpDigest.enable.default=false
